--- a/server/pom.xml
+++ b/server/pom.xml
@@ -28,6 +28,12 @@
             <groupId>examples</groupId>
             <artifactId>frontend</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>examples</groupId>
+                    <artifactId>render</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>examples</groupId>
