--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,3 +3,5 @@ server.port=8080
 # Force Spring Data to use the annotated table column names.
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+# Force caching of static resources
+spring.resources.cache.cachecontrol.max-age=300
