Added reusable styling and styling to the components.

--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -17,24 +17,12 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+            </plugin>
+            <plugin>
                 <groupId>nl.geodienstencentrum.maven</groupId>
                 <artifactId>sass-maven-plugin</artifactId>
-                <version>3.7.2</version>
-                <configuration>
-                    <destination>${project.build.outputDirectory}/static/css</destination>
-                    <sassOptions>
-                        <sourcemap>:none</sourcemap>
-                        <style>:compressed</style>
-                    </sassOptions>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>update-stylesheets</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
