--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <jacoco.exclude>**/*Application.*,**/*Configuration.*</jacoco.exclude>
+        <project.build.generateSourcesDirectory>
+            ${project.build.directory}/generated-sources
+        </project.build.generateSourcesDirectory>
+        <project.build.staticDirectory>${project.build.outputDirectory}/static</project.build.staticDirectory>
+        <project.build.sassDirectory>${project.basedir}/src/main/sass</project.build.sassDirectory>
+        <project.build.cssDirectory>${project.build.staticDirectory}/css</project.build.cssDirectory>
     </properties>
 
     <build>
@@ -86,38 +92,6 @@
         <pluginManagement>
             <plugins>
                 <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-dependency-plugin</artifactId>
-                    <version>3.1.1</version>
-                    <executions>
-                        <execution>
-                            <id>unpack</id>
-                            <phase>generate-sources</phase>
-                            <goals>
-                                <goal>unpack</goal>
-                            </goals>
-                            <configuration>
-                                <artifactItems>
-                                    <artifactItem>
-                                        <groupId>examples</groupId>
-                                        <artifactId>styles</artifactId>
-                                        <version>1.0-SNAPSHOT</version>
-                                        <type>jar</type>
-                                        <outputDirectory>${project.build.directory}/generated-sources</outputDirectory>
-                                    </artifactItem>
-                                </artifactItems>
-                            </configuration>
-                        </execution>
-                    </executions>
-                    <dependencies>
-                        <dependency>
-                            <groupId>examples</groupId>
-                            <artifactId>styles</artifactId>
-                            <version>1.0-SNAPSHOT</version>
-                        </dependency>
-                    </dependencies>
-                </plugin>
-                <plugin>
                     <groupId>nl.geodienstencentrum.maven</groupId>
                     <artifactId>sass-maven-plugin</artifactId>
                     <version>3.7.2</version>
@@ -125,15 +99,9 @@
                         <resources>
                             <resource>
                                 <source>
-                                    <directory>${project.basedir}/src/main/sass</directory>
+                                    <directory>${project.build.sassDirectory}</directory>
                                 </source>
-                                <destination>${project.build.outputDirectory}/static/css</destination>
-                            </resource>
-                            <resource>
-                                <source>
-                                    <directory>${project.build.directory}/generated-sources/sass</directory>
-                                </source>
-                                <destination>${project.build.outputDirectory}/static/css</destination>
+                                <destination>${project.build.cssDirectory}</destination>
                             </resource>
                         </resources>
                         <sassOptions>
@@ -188,7 +156,6 @@
 
     <modules>
         <module>backend</module>
-        <module>styles</module>
         <module>components</module>
         <module>render</module>
         <module>frontend</module>
