--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 # Force caching of static resources
 spring.resources.cache.cachecontrol.max-age=300
+# Force custom favicon
+spring.mvc.favicon.enabled=false
